--- a/emprestimo.html
+++ b/emprestimo.html
@@ -3,26 +3,101 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Empréstimo de Livro</title>
+  <title>Empréstimo de Livro - Biblioteca Universitária</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    body { background-color: #f3f4f6; }
-    .loan-container { max-width: 600px; margin: auto; padding: 2rem; }
-    select { transition: all 0.3s; }
-    select:focus { ring: 2px solid #3b82f6; }
+    body {
+      background: linear-gradient(to bottom, #e5e7eb, #f3f4f6);
+      font-family: 'Inter', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    .header {
+      background-color: #1e3a8a;
+      color: white;
+      padding: 1.5rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .logo svg {
+      fill: white;
+    }
+    .loan-container {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 1rem;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    }
+    .search-input, select {
+      transition: all 0.3s ease;
+    }
+    .search-input:focus, select:focus {
+      ring: 2px solid #3b82f6;
+      outline: none;
+    }
+    .confirm-button {
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+    .confirm-button:hover {
+      transform: translateY(-2px);
+    }
+    .footer {
+      margin-top: auto;
+      background-color: #1e3a8a;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
   </style>
 </head>
 <body>
-  <div class="loan-container bg-white rounded-lg shadow-lg">
-    <h2 class="text-2xl font-bold text-gray-800 mb-4">Empréstimo de Livro</h2>
-    <div class="flex space-x-2">
-      <select class="flex-1 p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-        <option>Engenharia de Software - Sommerville</option>
-        <option>Clean Code - Robert Martin</option>
-      </select>
-      <button class="bg-green-500 text-white px-4 py-3 rounded-lg hover:bg-green-600">Confirmar Empréstimo</button>
+  <header class="header">
+    <div class="max-w-7xl mx-auto flex items-center justify-between">
+      <div class="logo">
+        <svg width="24" height="24" viewBox="0 0 24 24">
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z"/>
+        </svg>
+        Biblioteca Universitária
+      </div>
+      <nav>
+        <ul class="flex space-x-6">
+          <li><a href="index.html" class="text-white hover:text-blue-200">Início</a></li>
+          <li><a href="consulta.html" class="text-white hover:text-blue-200">Consulta</a></li>
+          <li><a href="emprestimo.html" class="text-white hover:text-blue-200 font-bold">Empréstimo</a></li>
+          <li><a href="devolucao.html" class="text-white hover:text-blue-200">Devolução</a></li>
+        </ul>
+      </nav>
     </div>
-    <p class="mt-4 text-gray-600">Selecione um livro e confirme para realizar o empréstimo.</p>
+  </header>
+  <div class="loan-container">
+    <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Empréstimo de Livro</h2>
+    <p class="text-gray-600 mb-6 text-center">Selecione um livro disponível e confirme para realizar o empréstimo.</p>
+    <div class="flex flex-col space-y-4">
+      <input type="text" class="search-input p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Buscar livros por título ou autor...">
+      <div class="flex space-x-4">
+        <select class="flex-1 p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <option>Engenharia de Software - Sommerville</option>
+          <option>Clean Code - Robert Martin</option>
+          <option>Design Patterns - Erich Gamma</option>
+        </select>
+        <button class="confirm-button bg-green-500 text-white px-6 py-3 rounded-lg hover:bg-green-600">Confirmar Empréstimo</button>
+      </div>
+    </div>
+    <div class="mt-6 text-gray-600 text-sm text-center">
+      <p>Após a confirmação, o empréstimo será registrado com prazo de 7 dias.</p>
+    </div>
   </div>
+  <footer class="footer">
+    <p>&copy;Biblioteca Universitária. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
